--- a/Handwritten-digits-classification/Handwritten Digits Classification.ipynb
+++ b/Handwritten-digits-classification/Handwritten Digits Classification.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "Now we will load the data that we will be using to train our model\n",
     "\n",
-    "Here we are using digit dataset dataset which is available in the sklearn liberary itself."
+    "Here we are using digit dataset dataset which is available in the sklearn liberary itself. Here n_class=10 means there will be 10 classes "
    ]
   },
   {
